Restructure repo with frontend + backend