@@ -1,11 +1,12 @@
 package jazz.cosplay_store.config;
+
 import jazz.cosplay_store.model.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -17,13 +18,13 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // Assuming your User entity has a field "role"
-        return Collections.singletonList(new SimpleGrantedAuthority(user.getRole()));
+        // make sure role is prefixed with ROLE_
+        return List.of(new SimpleGrantedAuthority(user.getRole()));
     }
 
     @Override
     public String getPassword() {
-        return user.getPassword();
+        return user.getPassword(); // must return bcrypt hash from DB
     }
 
     @Override
@@ -33,32 +34,21 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public boolean isAccountNonExpired() {
-        return true; // You can customize this
+        return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return true; // You can customize this
+        return true;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return true; // You can customize this
+        return true;
     }
 
     @Override
     public boolean isEnabled() {
-        return true; // You can customize this
-    }
-
-    // Optionally expose your User entity for extra info
-    public String getEmail() {
-        return user.getEmail();
-    }
-
-    public String getFullName() {
-        return user.getFullName();
+        return true;
     }
 }
-
-
